--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CV - Ton Nom</title>
+  <title>CV - Halim OULD LAHSEN</title>
+  
+  <!-- CSS local -->
   <link rel="stylesheet" href="style.css">
+
+  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+  <!-- EmailJS SDK -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  <script type="text/javascript">
+    (function(){
+      emailjs.init("E2nceqWyEUuq_Yntx"); // remplace par ta clé publique EmailJS
+    })();
+  </script>
 </head>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-<script type="text/javascript">
-  (function(){
-    emailjs.init("E2nceqWyEUuq_Yntx"); // remplace par ta clé publique EmailJS
-  })();
-</script>
-<script src="script.js"></script>
-</body>
-</html>
 <body>
   <div class="cv-container">
 
@@ -23,7 +26,9 @@
     <header class="header">
       <div class="header-left">
         <h1 class="animated-title">Halim OULD LAHSEN</h1>
-        <p class="job-title">Ingénieur, PhD Automaticien en recherche d'opportunitésdans l’automatisme, R&D ou pilotage de projets industriels.</p>
+        <p class="job-title">
+          Ingénieur, PhD Automaticien en recherche d'opportunités dans l’automatisme, R&D ou pilotage de projets industriels.
+        </p>
       </div>
       <div class="header-right">
         <img src="ma-photo.jpg" alt="Photo de profil" class="profile-pic">
@@ -35,11 +40,9 @@
 
       <!-- COLONNE GAUCHE -->
       <div class="left-column">
-
         <!-- EXPÉRIENCES -->
         <section>
           <h2><i class="fa-solid fa-briefcase"></i> Expériences professionnelles</h2>
-
           <div class="experience">
             <h3>Développeur Web</h3>
             <p><strong>Entreprise ABC</strong> — 2022 - 2023</p>
@@ -48,31 +51,8 @@
                 Développement du site e-commerce
                 <span class="tooltip-text">
                   <strong>Titre :</strong> Création site e-commerce <br>
-                  <strong>Détails :</strong> Réalisation complète du front-end et back-end. <br>
-                  <a href="https://exemple.com/projet1" target="_blank">Cliquez pour voir le projet</a>
-                </span>
-              </li>
-              <li class="tooltip">
-                Optimisation SEO du site
-                <span class="tooltip-text">
-                  <strong>Titre :</strong> Optimisation SEO <br>
-                  <strong>Détails :</strong> Mise en place de balises, optimisation des temps de chargement. <br>
-                  <a href="https://exemple.com/projet2" target="_blank">Cliquez pour voir le projet</a>
-                </span>
-              </li>
-            </ul>
-          </div>
-
-          <div class="experience">
-            <h3>Stage Développeur Front-end</h3>
-            <p><strong>Entreprise XYZ</strong> — 2021</p>
-            <ul>
-              <li class="tooltip">
-                Création d'une landing page responsive
-                <span class="tooltip-text">
-                  <strong>Titre :</strong> Landing page <br>
-                  <strong>Détails :</strong> Utilisation de HTML, CSS et JavaScript pour rendre la page dynamique. <br>
-                  <a href="https://hal.science/hal-04864033" target="_blank">Cliquez pour voir le projet</a>
+                  <strong>Détails :</strong> Réalisation front-end & back-end <br>
+                  <a href="https://exemple.com/projet1" target="_blank">Voir le projet</a>
                 </span>
               </li>
             </ul>
@@ -91,12 +71,10 @@
             </ul>
           </div>
         </section>
-
       </div>
 
       <!-- COLONNE DROITE -->
       <div class="right-column">
-
         <!-- DÉTAILS PERSONNELS -->
         <section>
           <h2><i class="fa-solid fa-user"></i> Détails personnels</h2>
@@ -104,7 +82,6 @@
           <p><i class="fa-solid fa-house"></i> Adresse : 123 Rue Exemple, Ville</p>
           <p><i class="fa-solid fa-phone"></i> Téléphone : +33 6 12 34 56 78</p>
           <p><i class="fa-solid fa-envelope"></i> Email : exemple@mail.com</p>
-          <p><i class="fa-brands fa-linkedin"></i> LinkedIn : linkedin.com/in/monprofil</p>
         </section>
 
         <!-- COMPÉTENCES -->
@@ -112,43 +89,25 @@
           <h2><i class="fa-solid fa-tools"></i> Compétences</h2>
           <p><strong>Logiciels :</strong> Word, Excel, Photoshop</p>
           <p><strong>Programmation :</strong> HTML, CSS, JS, Python</p>
-          <p><strong>Compétences générales :</strong> Organisation, Communication, Gestion de projet</p>
         </section>
 
-        <!-- LANGUES -->
+        <!-- FORMULAIRE CONTACT -->
         <section>
-          <h2><i class="fa-solid fa-language"></i> Langues</h2>
-          <ul>
-            <li>Français (Natif)</li>
-            <li>Anglais (Courant)</li>
-            <li>Arabe (Courant)</li>
-          </ul>
+          <h2><i class="fa-solid fa-envelope"></i> Me contacter</h2>
+          <form id="contact-form">
+            <input type="text" id="user-name" placeholder="Votre nom" required>
+            <input type="email" id="user-email" placeholder="Votre email" required>
+            <button type="submit">S’inscrire</button>
+          </form>
+          <p id="confirmation" style="display:none; color:green; margin-top:10px;">
+            ✅ Bravo, vous faites partie maintenant de la liste de Halim !
+          </p>
         </section>
-
-        <!-- CENTRES D'INTÉRÊT -->
-        <section>
-          <h2><i class="fa-solid fa-heart"></i> Centres d'intérêt</h2>
-          <ul>
-            <li>Sport, Lecture, Voyages</li>
-          </ul>
-        </section>
-<section>
-  <h2><i class="fa-solid fa-envelope"></i> Me contacter</h2>
-
-  <form id="contact-form">
-  <input type="text" id="user-name" placeholder="Votre nom" required>
-  <input type="email" id="user-email" placeholder="Votre email" required>
-  <button type="submit">S’inscrire</button>
-</form>
-  <p id="confirmation" style="display:none; color:green; margin-top:10px;">
-    ✅ Bravo, vous faites partie maintenant de la liste de Halim !
-  </p>
-</section>
       </div>
     </div>
-
   </div>
 
+  <!-- JS local -->
   <script src="script.js"></script>
 </body>
 </html>
